@@ -1,15 +1,15 @@
 # advent-of-code-2024
-Let's try to do the advent of code 2024 in Java 23
+Let's try to do the advent of code 2024 in Java 23 (with '--enable-preview')
 
 Like [last year](https://github.com/forax/advent-of-code-2023), i will only do the first part of each challenge in hope it wil not take too much time.
-Unike last year, i will try to write the solution in "Beautiful Java" instead of code golfing a solution :) 
+Unike last year, i will try to write the solution in "Beautiful Java" and a code golfing solution :) 
 
 Each puzzle is contained in one file, by example for the day 1, you can just run
 ```bash
 java src/main/java/AdventOfCode01.java
 ```
 
-- [Day  1](https://adventofcode.com/2024/day/1) [AdventOfCode01.java](src/main/java/AdventOfCode01.java)
+- [Day  1](https://adventofcode.com/2024/day/1) [AdventOfCode01.java](src/main/java/AdventOfCode01.java) [AdventOfCode01Golf.java](src/main/java/AdventOfCode01Golf.java)
 
 Each code will be published the day after.
 
